--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,23 @@ jobs:
     environment:
       WEBRTCROOT: /webrtc 
 
+ dependencies:
+   pre:
+     - if [ ! -e /depot_tools ]; then
+          apt-get update; apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils;
+          git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git /depot_tools      ;    
+       fi;
+     - if [ ! -e ${WEBRTCROOT} ]; then
+          mkdir ${WEBRTCROOT} && cd ${WEBRTCROOT} && fetch --no-history --nohooks webrtc 
+          cd ${WEBRTCROOT} && sed -i -e "s|'src/resources'],|'src/resources'],'condition':'rtc_include_tests==true',|" src/DEPS 
+       fi;     
+   cache_directories:
+     - /depot_tools
+     - /webrtc
+     
     steps:     
-      - run: apt-get update; apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils
-      - run: git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git /depot_tools
       - run: echo 'export PATH=/depot_tools:$PATH' >> $BASH_ENV
-      - run: mkdir ${WEBRTCROOT} && cd ${WEBRTCROOT} && fetch --no-history --nohooks webrtc 
-      - run: cd ${WEBRTCROOT} && sed -i -e "s|'src/resources'],|'src/resources'],'condition':'rtc_include_tests==true',|" src/DEPS 
-
+ 
       - persist_to_workspace:
           root: /
           paths:
