--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,25 +6,6 @@ defaults: &defaults
 version: 2
 
 
-dependencies:
- pre:
-  - if [ ! -e /depot_tools/fetch ]; then
-    apt-get update; apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils;
-    git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git /depot_tools      ;
-   else
-    echo "Depot Tools Found";
-   fi;
-  - if [ ! -e /webrtc/src/PATENTS ]; then
-    mkdir /webrtc && cd /webrtc && fetch --no-history --nohooks webrtc 
-    cd ${WEBRTCROOT} && sed -i -e "s|'src/resources'],|'src/resources'],'condition':'rtc_include_tests==true',|" src/DEPS 
-   else
-    echo "WebRTC Found";
-   fi;     
-
-
- cache_directories:
-  - /depot_tools
-  - /webrtc
   
 jobs:
 
@@ -39,7 +20,33 @@ jobs:
       WEBRTCROOT: /webrtc 
 
     steps:  
-     - run: echo 'export PATH=/depot_tools:$PATH' >> $BASH_ENV
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "/depot_tools/README.md" }}   
+      - run:
+          name: Install Depot Tools
+          command: |
+              apt-get update
+              apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils
+              git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git /depot_tools      
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "/depot_tools/README.md" }}
+          paths:
+            - "/depot_dools"
+      - run: echo 'export PATH=/depot_tools:$PATH' >> $BASH_ENV            
+      - restore_cache:
+          key: deps2-{{ .Branch }}-{{ checksum "/webrtc/src/PATENTS" }}   
+      - run:
+          name: Install webrtc Tools
+          command: |
+              mkdir /webrtc && cd /webrtc 
+              fetch --no-history --nohooks webrtc 
+              cd ${WEBRTCROOT}
+              sed -i -e "s|'src/resources'],|'src/resources'],'condition':'rtc_include_tests==true',|" src/DEPS 
+      - save_cache:
+          key: deps2-{{ .Branch }}-{{ checksum "/webrtc/src/PATENTS" }}
+          paths:
+            - "/webrtc"
+      
      - persist_to_workspace:
         root: /
         paths:
