--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,24 +26,23 @@ jobs:
       - run:
           name: Install Depot Tools
           command: |
-              if [ ! -e /depot_tools ]; then
+              if [ ! -e /opt/depot_tools ]; then
                  apt-get update;
                  apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils libgtk-3-dev libasound2-dev;
-                 git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git /depot_tools;
+                 git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git /opt/depot_tools;
               fi  
       - run: 
           name: Install Linaro
           command: |
               if [ ! -e /gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf ]; then
-                 wget -qO- https://releases.linaro.org/components/toolchain/binaries/latest-6/arm-linux-gnueabihf/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf.tar.xz  | tar xJ -C /          
+                 wget -qO- https://releases.linaro.org/components/toolchain/binaries/latest-6/arm-linux-gnueabihf/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf.tar.xz  | tar xJ -C /opt          
               fi  
-      - run: echo 'export PATH=/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf/bin:$PATH' >> $BASH_ENV
-      - run: echo 'export PATH=/depot_tools:$PATH' >> $BASH_ENV
+      - run: echo 'export PATH=/opt/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf/bin:$PATH' >> $BASH_ENV
+      - run: echo 'export PATH=/opt/depot_tools:$PATH' >> $BASH_ENV
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements/depot_tools.txt" }}
           paths:
-            - "/depot_tools"
-            - "/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf"            
+            - "/opt"            
       - restore_cache:
           key: deps2-{{ .Branch }}-{{ checksum "requirements/webrtc.txt" }}   
       - run:
@@ -58,8 +57,7 @@ jobs:
 
       - persist_to_workspace:
           root: /
-          paths:
-            - depot_tools 
+          paths:            
             - webrtc
 
             
@@ -81,7 +79,7 @@ jobs:
       - attach_workspace:
           at: /          
       - checkout    
-      - run: echo 'export PATH=/depot_tools:$PATH' >> $BASH_ENV
+      - run: echo 'export PATH=opt/depot_tools:$PATH' >> $BASH_ENV
       - run: cd ${WEBRTCROOT} && gclient sync 
       - run: cd ${WEBRTCROOT}/src && gn gen ${GYP_GENERATOR_OUTPUT}/out/Release --args="${GNARGSCOMMON} ${GNARGS}" 
       - run: cd ${WEBRTCROOT}/src && ninja -C ${GYP_GENERATOR_OUTPUT}/out/Release jsoncpp rtc_json webrtc builtin_audio_decoder_factory
@@ -112,8 +110,8 @@ jobs:
       - attach_workspace:
           at: /
       - checkout
-      - run: echo 'export PATH=/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf/bin:$PATH' >> $BASH_ENV
-      - run: echo 'export PATH=/depot_tools:$PATH' >> $BASH_ENV
+      - run: echo 'export PATH=/opt/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf/bin:$PATH' >> $BASH_ENV
+      - run: echo 'export PATH=/opt/depot_tools:$PATH' >> $BASH_ENV
       - run: ${WEBRTCROOT}/src/build/linux/sysroot_scripts/install-sysroot.py --arch=arm
       - run: cd ${WEBRTCROOT}/src && gn gen ${GYP_GENERATOR_OUTPUT}/out/Release --args="${GNARGSCOMMON} ${GNARGS}"
       - run: make live555 alsa-lib
