--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,8 @@ jobs:
               fi
       - save_cache:
           key: deps2-{{ .Branch }}-{{ checksum "requirements/webrtc.txt" }}   
+          paths:
+            - "/webrtc"
       - persist_to_workspace:
           root: /
           paths:            
