--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           command: |
               if [ ! -e /opt/depot_tools ]; then
                  apt-get update;
-                 apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils libgtk-3-dev libasound2-dev;
+                 apt-get install -y --no-install-recommends autoconf automake libtool xz git make g++ xz-utils libgtk-3-dev libasound2-dev;
                  git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git /opt/depot_tools;
               fi  
       - run: 
