--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           name: Install Ubuntu pieces via apt
           command: |          
               apt-get update;
-              apt-get install -y --no-install-recommends autoconf automake libtool xz git make g++ xz-utils libgtk-3-dev libasound2-dev;
+              apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils libgtk-3-dev libasound2-dev;
       - run:
           name: Install Depot Tools
           command: |
@@ -92,7 +92,7 @@ jobs:
           name: Install Ubuntu pieces via apt
           command: |          
               apt-get update;
-              apt-get install -y --no-install-recommends autoconf automake libtool xz git make g++ xz-utils libgtk-3-dev libasound2-dev;
+              apt-get install -y --no-install-recommends autoconf automake libtool  git make g++ xz-utils libgtk-3-dev libasound2-dev;
 #     - run: cd ${WEBRTCROOT} && gclient sync 
       - run: cd ${WEBRTCROOT}/src && gn gen ${GYP_GENERATOR_OUTPUT}/out/Release --args="${GNARGSCOMMON} ${GNARGS}" 
       - run: cd ${WEBRTCROOT}/src && ninja -C ${GYP_GENERATOR_OUTPUT}/out/Release jsoncpp rtc_json webrtc builtin_audio_decoder_factory
@@ -126,7 +126,7 @@ jobs:
           name: Install Ubuntu pieces via apt
           command: |          
               apt-get update;
-              apt-get install -y --no-install-recommends autoconf automake libtool xz git make g++ xz-utils libgtk-3-dev libasound2-dev;
+              apt-get install -y --no-install-recommends autoconf automake libtool git make g++ xz-utils libgtk-3-dev libasound2-dev;
       - run: echo 'export PATH=/opt/gcc-linaro-6.4.1-2017.11-x86_64_arm-linux-gnueabihf/bin:$PATH' >> $BASH_ENV
       - run: echo 'export PATH=/opt/depot_tools:$PATH' >> $BASH_ENV
 #     - run: cd ${WEBRTCROOT} && gclient sync
